--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,11 @@
-Package: rlung
-Title: What the Package Does (one line, title case)
-Version: 0.0.0.9000
-Authors@R: person("First", "Last", email = "first.last@example.com", role = c("aut", "cre"))
-Description: What the package does (one paragraph).
+Package: friendlyeval
+Title: A friendly interface to tidyeval for the casual dplyr user.
+Version: 0.0.1
+Authors@R: person("Miles", "McBain", email = "miles.mcbain@gmail.com", role = c("aut", "cre"))
+Description: Provides an alterative auto-complte friendly interface to rlang that is more closely aligned with the task domain of a user 'programming with dplyr'. Facility is provided to replace friendlyeval functions with their rlang equivalents after protyping a solution.
 Depends: R (>= 3.4.4)
-License: What license is it under?
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Imports: rlang
+RoxygenNote: 6.0.1
