--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: friendlyeval
 Title: A Friendly Interface to Tidyeval
-Version: 0.1.0
+Version: 0.1.1
 Authors@R: c(
            person("Miles", "McBain", email = "miles.mcbain@gmail.com", role = c("aut", "cre")),
            person("Patrick", "Kennedy", role = "aut"),
@@ -15,10 +15,10 @@ Depends: R (>= 3.4.0)
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-Imports: rlang,
+Imports: rlang (>= 0.3.0.0),
     purrr,
     tibble,
     rstudioapi
-RoxygenNote: 6.0.1
+RoxygenNote: 6.1.0
 Suggests: testthat,
     dplyr
